package observer02;

/**
 * @author agj017@gmail.com
 * @since 2022/03/29
 */
public interface Observer {

    void update(Subject subject);

}
